Fixing the event title word wrap

--- a/src/app/components/event/event.component.css
+++ b/src/app/components/event/event.component.css
@@ -4,7 +4,7 @@
     flex-direction: row;
     cursor: pointer;
     /* background-color: aliceblue; */
-    width: auto;
+    width: max-content;
     height: auto;
 }
 
@@ -21,5 +21,6 @@ i{
     height: 100%;
     margin-block-start: 0;
     margin-block-end: 0;
+    white-space: nowrap;
 }
 
